# jfbuild

./: .gitignore  CMakeLists.txt
doc/: build.txt  build2.txt
include/: CMakeLists.txt  algo_utils.hpp  baselayer.hpp  build.hpp  cache1d.hpp  char_utils.hpp  compat.hpp  crc32.hpp  editor.hpp  glbuild.hpp  glbuild_fs_vs.hpp  mmulti.hpp  osd.hpp  point.hpp  polymost_fs_vs_aux.hpp  pragmas.hpp  screencapture.hpp  scriptfile.hpp  sdlayer.hpp  string_utils.hpp  textfonts.hpp  version.hpp  winlayer.hpp
kenbuild/: CMakeLists.txt
kenbuild/rsrc/: game_icon.cpp  sdlappicon_build.cpp  sdlappicon_game.cpp  startgtk_build_gresource.cpp  startgtk_game.cpp  startgtk_game_gresource.cpp  startgtk_game_gresource.hpp
kenbuild/src/: StartupWinController.m  bstub.cpp  buildres.rc  config.cpp  game.cpp  game.hpp  gameres.rc  kdmsound.cpp  kdmsound.hpp  kdmsound_sdl2.cpp  kdmsound_stub.cpp  kdmsound_xaudio2.cpp  names.hpp  startgtk_game.cpp  startwin_game.cpp
src/: CMakeLists.txt  EditorStartupWinController.m  a-c.cpp  a.hpp  asmprot.cpp  baselayer.cpp  baselayer_priv.hpp  build.cpp  cache1d.cpp  compat.cpp  config.cpp  crc32.cpp  defs.cpp  engine.cpp  engine_priv.hpp  glbuild.cpp  glbuild_fs.glsl  glbuild_priv.hpp  glbuild_vs.glsl  glext.hpp  gtkbits.cpp  gtkbits.hpp  hightile.cpp  hightile_priv.hpp  kplib.cpp  kplib.hpp  mdsprite.cpp  mdsprite_priv.hpp  mmulti.cpp  mmulti_null.cpp  osd.cpp  osxbits.hpp  osxbits.m  polymost.cpp  polymost_fs.glsl  polymost_priv.hpp  polymost_vs.glsl  polymostaux_fs.glsl  polymostaux_vs.glsl  polymosttex.cpp  (+15 more)
tools/: CMakeLists.txt  arttool.cc  generatesdlappicon.cpp  givedepth.cpp  kextract.cpp  kgroup.cpp  klist.cpp  kmd2tool.cpp  mkpalette.cpp  transpal.cpp  vgafont.cpp  wad2art.cpp  wad2map.cpp
